k8s/overlays/production/patch-env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: monorepo-backend
spec:
    template:
        spec:
            containers:
                - name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: monorepo-frontend
spec:
    template:
        spec:
            containers:
                - name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: monorepo-kerosen-frontend
spec:
    template:
        spec:
            containers:
                - name: kerosen-frontend
