k8s/overlays/production/patch-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: monorepo-frontend-ingress
spec:
    tls:
        - hosts:
              - monorepo.thomashermine.be
          secretName: monorepo-frontend-tls
    rules:
        - host: monorepo.thomashermine.be
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: monorepo-frontend
                            port:
                                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: monorepo-theviewlodge-ingress
spec:
    tls:
        - hosts:
              - theviewlodge.be
          secretName: monorepo-theviewlodge-tls
    rules:
        - host: theviewlodge.be
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: monorepo-theviewlodge
                            port:
                                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: monorepo-kerosen-frontend-ingress
spec:
    tls:
        - hosts:
              - kerosen.thomashermine.be
          secretName: monorepo-kerosen-frontend-tls
    rules:
        - host: kerosen.thomashermine.be
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: monorepo-kerosen-frontend
                            port:
                                number: 80
